fixed z-index issue and added animation

--- a/css/tutorial.css
+++ b/css/tutorial.css
@@ -131,6 +131,7 @@
     .expand-button-tut{
         display: block;
         -webkit-transform: translate3d(0, 0, 0);
+        transition: all 0.3s ease 0s;
     }
 
     .left-col{
